--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -1,11 +1,11 @@
-navbar(class="navbar navbar-expand-lg navbar-light bg-light ps-2")
+navbar(class="navbar navbar-expand-lg navbar-light bg-light px-3")
     a(class="navbar-brand" href="#")
-        img(width="30" height="30" src="images/twitter.png" alt="Logo")
+        img(width="30" height="30" src="/images/twitter.png" alt="Logo")
     button(class="navbar-toggler")
         span(class="navbar-toggler-icon")
     div(class="collapse navbar-collapse")
         ul(class="navbar-nav ms-auto")
             li(class="nav-item")
-                a(class="nav-link active" href="#") Home
+                a(class="btn btn-primary btn-tweet me-2" href="/tweets/new") Tweet
             li(class="nav-item")
                 a(class="nav-link" href="#") Connexion
