--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,18 +8,12 @@
   max-width: 300px;
 }
 
-.tweet-element {
-  border-radius: 0px;
-  border-top: 0px;
-}
-
-.tweet-element:first-child {
-  border-top: 1px solid #ddd;
-  font-size: 14px;
-}
-
 .btn-tweet {
   border-radius: 20px;
+}
+
+.br {
+  border-radius: 10px;
 }
 
 .b {
