--- a/views/includes/topbar.pug
+++ b/views/includes/topbar.pug
@@ -1,5 +1,5 @@
 navbar(class="navbar navbar-expand-lg navbar-light bg-light px-3")
-    a(class="navbar-brand" href="#")
+    a(class="navbar-brand" href="/tweets")
         img(width="30" height="30" src="/images/twitter.png" alt="Logo")
     button(class="navbar-toggler")
         span(class="navbar-toggler-icon")
